Update to POST request
